buttons, another gif+music and optimization of code

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-body{
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
+body
+{
+  background-color: DarkCyan;
 }
 
-#video{
+#video
+{
   position:relative;
   width:267px;
   height:25px;
