--- a/style.css
+++ b/style.css
@@ -1,12 +1,34 @@
 body
 {
-  background-color: DarkCyan;
+    background-image: url("./img/0.gif");
+    background-color: DarkCyan;
 }
 
-#video
+#go-back
 {
-  position:relative;
-  width:267px;
-  height:25px;
-  display: none;
+    width: 34px;
+    height: 34px;
+}
+
+#go-next
+{
+    width: 34px;
+    height: 34px;
+}
+
+#div1
+{
+    margin-top: 4px;
+    position: relative;
+    width: 72px;
+    height: 17px;
+    overflow: hidden;
+    border-radius: 25px;
+}
+
+#div2
+{
+    position: absolute;
+    top: -276px;
+    left: -20px;
 }
