--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url("../img/0.gif");
+    background-image: url("../img/0.png");
     background-color: DarkCyan;
 }
 
